- consolidate setting saving value to function in pendingeditstore, - subtle pale overlay when invisible backdrop shown similar to currentstack - ensure all clicks are trapped when invisible modal is shown - improve unit test for InvisibleBackdrop

--- a/ui/client-react/src/components/qbModal/invisibleBackdrop.scss
+++ b/ui/client-react/src/components/qbModal/invisibleBackdrop.scss
@@ -1,16 +1,21 @@
 @import '../../assets/css/_qbVariables';
 
   .invisibleBackdropModal-backdrop.in {
-    opacity: 0.3;
+    opacity: 0.17;
     background-color: #fff;
   }
 
   .invisibleBackdropModal-backdrop,
-  .invisibleBackdropModal-dialog {
+  .invisibleBackdropModal-dialog,
+  .invisibleLink {
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
     z-index: $zindex-modal-background;
+  }
+
+  .invisibleLink {
+    cursor: wait;
   }
